# SVGCreator

./: CMakeLists.txt  README.md  main  main.cpp  makefile
src/: shape.cpp  shape.h
src/helpers/: FileHelper.cpp  FileHelper.h  Prompter.cpp  Prompter.h
src/shapes/: circle.cpp  circle.h  point.cpp  point.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  segment.cpp  segment.h
